[package]
name = "mary"
version = "0.1.0"
edition = "2021"
description = "Nextgen Marginfi Liquidator"

[dependencies]
signal-hook = "0.3.18"
ctrlc = "3.4.7"
anyhow = "1.0.79"
solana-client = "=2.1.20"
solana-sdk = "=2.1.20"
solana-program = "=2.1.20"
log = "0.4.21"
env_logger = "0.11.3"
bincode = "1.3.3"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "v2.1" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "v2.1" }
tokio = { version = "1.47.0" }
futures = "0.3.30"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
anchor-lang = { version = "0.31.1" }

[dependencies.marginfi]
git = "https://github.com/mrgnlabs/marginfi-v2"
tag = "mrgn-0.1.4-rc1"
features = ["mainnet-beta", "client", "no-entrypoint"]

[dev-dependencies]
serial_test = "3.2.0"
